# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
movies/: admin.py  models.py  permission.py  serializer.py  urls.py  views.py
movies/migrations/: 0001_initial.py
movies_project/: settings.py  urls.py
